[package]
name = "disruptor-rs"
version = "0.1.0"
authors = ["kaiserkarel <k.l.kubat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
crossbeam-queue = "0.3"
crossbeam = "0.8"
thiserror = "1"
futures = "0.3"
anyhow = "1"
ctx-thread = "0.1"
scipio = "0.1.2-alpha"